opa/constraints/require-labels-limits.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabelsResources
metadata:
  name: require-labels-and-resource-limits
spec:
  match:
    kinds:
      - apiGroups: ["apps"]
        kinds: ["Deployment"]
